--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -624,6 +624,107 @@ body
 .am-Report
 	background #eee
 
+
+
+/*------------------------------------*
+	$ REVIEWS
+*------------------------------------*/
+.reviews
+	max-width 730px
+	margin auto
+	.title
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 25px
+		color #3a3d3f
+		display flex
+		align-items center
+		justify-content center
+		padding 30px 0
+		span
+			padding 2px 7px
+			background #1f79ed
+			border-radius 17px
+			font-size 10px
+			color white
+	.review
+		display flex
+		padding 20px 0
+		border-top solid 1px #e7e7e7
+		&.inner
+			margin-left 60px
+		.avatar
+			margin-right 20px
+			img
+				min-width 50px
+				width 50px
+				height 50px
+				border-radius 50%
+		.content
+			flex 1
+		.info
+			display flex
+			align-items center
+		.name
+			font-family 'Montserrat', sans-serif
+			font-weight bold
+			text-transform uppercase
+			color #3c3d41
+			font-size 10px
+			letter-spacing 1.5px
+		.date
+			font-family: 'PT Serif', serif;
+			font-style italic
+			font-size 12px
+			color #838d8f
+		.text
+			font-family: 'PT Serif', serif;
+			font-size 16px
+			color #959ea0
+			margin-top 10px
+			line-height 1.25
+			i
+				font-style italic
+		.reply
+			margin-top 15px
+			font-family 'Montserrat', sans-serif
+			font-weight bold
+			font-size 10px
+			letter-spacing 1.5px
+			color #838d8f
+		textarea
+			background #eeeeee
+			width 100%
+			height 100px
+			padding 20px
+			box-sizing border-box
+		button
+			margin-top 15px
+			background white
+			font-family 'Montserrat', sans-serif
+			font-weight bold
+			color charcoal-grey
+			font-size 10px
+			letter-spacing 2px
+			padding 10px 30px
+			border-radius 17px
+			border solid 1px #ededed
+			cursor pointer
+			float: right;
+
+	.subtitle
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 11px
+		color charcoal-grey
+		letter-spacing 1.5px
+		text-align center
+		padding 15px 0
+
+
+/*------------------------------------*
+	$ TAGS
+*------------------------------------*/
 .tags-container
 	max-width 780px
 	margin auto
