--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -163,25 +163,98 @@
 
 
 	<!-- ********************************************************************
-		$ TAGS
+		$ REVIEWS
 	********************************************************************* -->
-	{% if currentPath == 'tags' %}
 	<div class="grid-container">
 		<div class="grid-100">
-			<div class="tags-container">
-				<p class="title">Tags&nbsp;&nbsp;<span>{{tags.length}}</span></p>
-				<div class="u-separator"></div>
-				<div class="tags">
-					{% for tag in tags %}
-					{% set url = "#" + tag.name %}
-					<div class="tag uppercase"><a href='/works/category/all/page-1/?term={{url|url_encode}}'>{{tag.name}}</a></div>
-					{% endfor %}
+			<div class="reviews">
+				<p class="title">Reviews &nbsp;&nbsp;<span>25</span></p>
+				<div class="review">
+					<div class="avatar"><img src="/img/avatar.jpg"></div>
+					<div class="content">
+						<div class="info">
+							<p class="name">ANNA OSTYANKO</p>&nbsp;&nbsp;&nbsp;
+							<p class="date"><i class="bi_interface-clock"></i> &nbsp;June 11, 2014 9:26 pm</p>
+						</div>
+						<p class="text">Unlike pop-culture’s current obsession with bleak, heavy drama (<i>Game Of Thrones, Breaking Bad</i>, we’re talking to you)</p>
+						<p class="reply"><i class="bi_com-bubble-a"></i>&nbsp;REPLY</p>
+					</div>
+				</div>
+				<div class="review inner">
+					<div class="avatar"><img src="/img/avatar.jpg"></div>
+					<div class="content">
+						<div class="info">
+							<p class="name">ALEXEY RYBIN</p>&nbsp;&nbsp;&nbsp;
+							<p class="date"><i class="bi_interface-clock"></i> &nbsp;June 11, 2014 9:26 pm</p>
+						</div>
+						<p class="text">Unlike pop-culture’s current obsession with bleak, heavy drama (<i>Game Of Thrones, Breaking Bad</i>, we’re talking to you)</p>
+						<p class="reply"><i class="bi_com-bubble-a"></i>&nbsp;REPLY</p>
+					</div>
+				</div>
+				<div class="review">
+					<div class="avatar"><img src="/img/avatar.jpg"></div>
+					<div class="content">
+						<div class="info">
+							<p class="name">ANNA OSTYANKO</p>&nbsp;&nbsp;&nbsp;
+							<p class="date"><i class="bi_interface-clock"></i> &nbsp;June 11, 2014 9:26 pm</p>
+						</div>
+						<p class="text">Unlike pop-culture’s current obsession with bleak, heavy drama (<i>Game Of Thrones, Breaking Bad</i>, we’re talking to you)</p>
+						<p class="reply"><i class="bi_com-bubble-a"></i>&nbsp;REPLY</p>
+					</div>
+				</div>
+				<p class="subtitle">ADD COMMENT</p>
+				<div class="review">
+					<div class="avatar"><img src="/img/avatar.jpg"></div>
+					<div class="content">
+						<textarea></textarea>
+						<button>ADD COMMENT</button>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<!-- ********************************************************************
+		$ TAGS
+	********************************************************************* -->
+	{% if currentPath == 'tags' %}
+		<div class="grid-container">
+			<div class="grid-100">
+				<div class="tags-container">
+					<p class="title">Tags&nbsp;&nbsp;<span>25</span></p>
+					<div class="u-separator"></div>
+					<div class="tags">
+						{% for tag in tags %}
+						{% set url = "#" + tag.name %}
+						<div class="tag uppercase"><a href='/works/category/all/page-1/?term={{url|url_encode}}'>{{tag.name}}</a></div>
+						{% endfor %}
+						<!-- <div class="tag">BIRDS</div>
+						<div class="tag">NATURALEZA</div>
+						<div class="tag">OIL ON CANVAS</div>
+						<div class="tag">ANGRY BIRD</div>
+						<div class="tag">TAPPERWARE</div>
+						<div class="tag">TAPPERWARE</div>
+						<div class="tag">ANGRY BIRD</div>
+						<div class="tag">YELLOW</div>
+						<div class="tag">OIL ON CANVAS</div>
+						<div class="tag">BIRDS</div>
+						<div class="tag">TAPPERWARE</div>
+						<div class="tag">BIRDS</div>
+						<div class="tag">OIL ON CANVAS</div>
+						<div class="tag">NATURALEZA</div>
+						<div class="tag">BIRDS</div>
+						<div class="tag">OIL ON CANVAS</div>
+						<div class="tag">BIRDS</div> -->
+					</div>
+				</div>
+			</div>
+		</div>
 	{% endif %}
 
+
+	<!-- ********************************************************************
+		$ MORE WORKS
+	********************************************************************* -->
 	{% if currentPath == 'index' %}
 		<div class="grid-container u-margin-top-60">
 			<div class="grid-100">
