remove hover in social actions

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1923,18 +1923,18 @@ body
 				color #4000ff
 
 .action
-	position relative
-	.actions-box
-		display none
-	&:hover
-		.actions-box
-			display block
+	// position relative
+	// .actions-box
+	// 	display none
+	// &:hover
+	// 	.actions-box
+	// 		display block
 
 .actions-box
 	border solid 1px #c2c2c2
 	padding 20px
 	border-radius 4px
-	position absolute
+	// position absolute
 	left 50%
 	transform translate(-50%, 0)
 	background white
