collect featured added

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -171,7 +171,7 @@
 			<a href='/user/<%=User.username%>/collection/<%=nameSlugify%>'>
 				<div class="collection-card">
 					<div class="collection-card-stats">
-						<p><%=description%></p>
+						<p><%=name%></p>
 					</div>
 					<div class="collection-card-images">
 						<% _.each(works, function(work) { %>
