add all parameter on filter

--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -74,6 +74,10 @@
 						</div>
 					</div>
 					<div class="u-separator"></div>
+					<p class="am-Single-text u-margin-top-10">ancho : {{product.width}} cm</p>
+					<p class="am-Single-text u-margin-top-10">largo : {{product.length}} cm</p>
+					<p class="am-Single-text u-margin-top-10">profundidad : {{product.depth}} cm</p>
+					<p class="am-Single-text u-margin-top-10">peso : {{product.weight}} kg</p>
 					<p class="am-Single-title-text u-margin-top-15">Los pajaritos ya no cantan como antes, cómo antes cantaban, 2014</p>
 					<p class="am-Single-text u-margin-top-10">Serie: <strong>Los noctámbulos y otros demonios.</strong></p>
 					<p class="am-Single-text u-margin-top-10">Estado: <strong>Disponible original y productos</strong></p>
