--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -41,7 +41,7 @@
 	<div class="discover-content grid-container u-padding-top-10 u-padding-bottom-40">
 		<div class="grid-100 grid-parent">
 			<div class="grid work-layout-discover">
-
+				<div class="grid-sizer"></div>
 			</div>
 		</div>
 	</div>
